feat: accounts endpoints added on router and swagger
